# ZebX

./: .config.status.swp  .gitignore  .project  .travis.yml  COMPLIANCE  LICENSE  Makefile  README.md  aclocal.m4  build.sh  config.guess  config.h  config.status  configure  get-deps.sh  install  libtool  missing  version.h
bbdev/: README.md  libtool
bbdev/data/styles/: Makefile
bbdev/doc/: Makefile
bbdev/doc/ja_JP/: Makefile
bbdev/doc/nl_NL/: Makefile
bbdev/lib/: Application.cc  Bitmap.cc  Color.hh  Display.cc  Display.hh  EventHandler.hh  Font.hh  Image.cc  Menu.hh  Rect.cc  Rect.hh  Resource.cc  Texture.hh  Timer.hh  Unicode.hh  Util.cc  Util.hh  XDG.cc  XDG.hh  libbt.la
bbdev/lib/.deps/: Application.Plo  Bitmap.Plo  Color.Plo  Display.Plo  EWMH.Plo  Font.Plo  Image.Plo  Menu.Plo  Pen.Plo  (+2 more)
bbdev/src/: BlackboxResource.cc  BlackboxResource.hh  Iconmenu.cc  Iconmenu.hh  Rootmenu.hh  Screen.hh  Slitmenu.hh  Toolbar.hh  Toolbarmenu.hh  WindowGroup.hh  Workspacemenu.hh  blackbox.hh
bbdev/util/: Makefile  bsetroot  bsetroot.cc  bsetroot.hh  bstyleconvert
configs/: .blackboxrc
data/: Makefile  README.style  menu
data/styles/: Makefile  Makefile.am
doc/: Makefile
doc/fr_FR/: Makefile
doc/ja_JP/: Makefile
doc/nl_NL/: Makefile
doc/sl_SI/: Makefile
lib/: Application.cc  Application.hh  Application.lo  Bitmap.cc  Bitmap.hh  Color.cc  Color.hh  Display.cc  Display.hh  EWMH.cc  EWMH.hh  EventHandler.hh  Font.cc  Font.hh  Image.cc  Image.hh  Makefile  Makefile.am  Makefile.in  Menu.cc  Menu.hh  Pen.cc  Pen.hh  PixmapCache.cc  PixmapCache.hh  Rect.cc  Rect.hh  Resource.cc  Resource.hh  Texture.cc  Texture.hh  Timer.cc  Timer.hh  Unicode.cc  Unicode.hh  Util.cc  Util.hh  XDG.cc  XDG.hh  libbt.pc
lib/.deps/: Application.Plo  Bitmap.Plo  Color.Plo  Display.Plo  EWMH.Plo  Font.Plo  Image.Plo  Menu.Plo  Pen.Plo  PixmapCache.Plo  Rect.Plo  Resource.Plo  Texture.Plo  Timer.Plo  Unicode.Plo  Util.Plo  XDG.Plo
nls/C/: main.m
src/: BlackboxResource.cc  BlackboxResource.hh  Clientmenu.cc  Clientmenu.hh  Configmenu.cc  Configmenu.hh  Makefile  Makefile.am  Makefile.in  Rootmenu.cc  Screen.cc  Screen.hh  ScreenResource.cc  ScreenResource.hh  Slit.cc  Slit.hh  Slitmenu.cc  Slitmenu.hh  StackingList.cc  StackingList.hh  Toolbar.cc  Toolbar.hh  Toolbarmenu.cc  Toolbarmenu.hh  Window.cc  Window.hh  WindowGroup.cc  WindowGroup.hh  Windowmenu.cc  Windowmenu.hh  Workspace.cc  Workspace.hh  Workspacemenu.cc  Workspacemenu.hh  blackbox.cc  blackbox.hh  main.cc
src/.deps/: BlackboxResource.Po  Clientmenu.Po  Configmenu.Po  Iconmenu.Po  Rootmenu.Po  Screen.Po  ScreenResource.Po  Slit.Po  Slitmenu.Po  StackingList.Po  Toolbar.Po  Toolbarmenu.Po  Window.Po  WindowGroup.Po  Windowmenu.Po  Workspace.Po  Workspacemenu.Po  blackbox.Po  main.Po
styles/: xcus.black
util/: Makefile  Makefile.am  Makefile.in  bsetroot  bsetroot.cc  bsetroot.hh  bstyleconvert  bstyleconvert.cc
util/.deps/: bsetroot.Po  bstyleconvert.Po
zebx-greeter/: README.md  setup.py  zebx-greeter.dekstop  zebx-greeter.ui  zebx_greeter.py
zebx-greeter/config/: .kdeskrc
zebx-greeter/debian/: changelog  control  kano-greeter-i18n-orig.install  kano-greeter.postinst  kano-greeter.postrm  rules
zebx-greeter/po/: Makefile  PYPOTFILES  cz.po  de.po  en_QQ.po  es_AR.po  ja.po  sk.po
zebx-greeter/zeb_greeter/: __init__.py  greeter_window.py  last_user.py  login_with_kw_view.py  newuser_view.py  password_view.py  paths.py  user_list.py
zebx.configs/: .Xresources.config  .xinitrc.config
(+15 files in other folders)
