# data/styles/Makefile.am for ZebX - an X11 Desktop Environment

styledir = $(pkgdatadir)/styles
MAINTAINERCLEANFILES = Makefile.in
style_DATA = Blue Gray Green Purple Red
# style_DATA = Artwiz Cthulhain Flux Minimal Nyz Operation Outcomes Rampage Rancor Results Shade Spiff TDF Twice

distclean-local:
	rm -f *\~ .\#*

uninstall-local:
	rm -r -f $(styledir)
